--- a/figma.html
+++ b/figma.html
@@ -43,11 +43,11 @@
                     </li>
                     <li class="img-text">
                         <img src="logo/IMAGE (1).svg" alt="">
-                        <span>Awarded Product design</span>
+                        <span>Ecofriendly Approach</span>
                     </li>
                     <li class="img-text">
                         <img src="logo/IMAGE (2).svg" alt="">
-                        <span>Awarded Product design</span>
+                        <span>Crafted in Spain</span>
                     </li>
                 </ul>
                 <ul class="logo-listt">
